--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1377,10 +1377,38 @@ mesos_log_SOURCES = log/main.cpp
 mesos_log_CPPFLAGS = $(MESOS_CPPFLAGS)
 mesos_log_LDADD = libmesos.la $(LDADD)
 
+if ENABLE_NEW_CLI
+MESOS_CLI_SRCDIR = $(srcdir)/cli_new
+MESOS_CLI_BUILDDIR = $(builddir)/cli
+MESOS_CLI_HIDDEN_IMPORTS = \
+  $(patsubst %, --hidden-import mesos.plugins.%, \
+    $(notdir $(shell find $(MESOS_CLI_SRCDIR)/lib/mesos/plugins \
+                          -mindepth 1 -maxdepth 1 -type d)))
+
+bin_PROGRAMS += mesos
+
+mesos$(EXEEXT): $(shell find $(MESOS_CLI_SRCDIR) | grep -v .virtualenv)
+	@echo "Building the CLI ..."
+	@PYTHON=$(PYTHON) \
+	 VIRTUALENV_DIRECTORY=$(MESOS_CLI_BUILDDIR) \
+	 $(MESOS_CLI_SRCDIR)/bootstrap
+	@echo "VERSION = \"$(PACKAGE_VERSION)\"" \
+	  > $(MESOS_CLI_BUILDDIR)/version.py
+	@source $(MESOS_CLI_SRCDIR)/activate; \
+	 pyinstaller --paths $(MESOS_CLI_SRCDIR)/lib \
+	             --paths $(MESOS_CLI_BUILDDIR) \
+	             --specpath $(MESOS_CLI_BUILDDIR) \
+	             --workpath $(MESOS_CLI_BUILDDIR)/work \
+	             --distpath $(builddir) \
+	             $(MESOS_CLI_HIDDEN_IMPORTS) \
+	             --onefile \
+	             $(MESOS_CLI_SRCDIR)/bin/main.py
+else
 bin_PROGRAMS += mesos
 mesos_SOURCES = cli/mesos.cpp
 mesos_CPPFLAGS = $(MESOS_CPPFLAGS)
 mesos_LDADD = libmesos.la $(LDADD)
+endif
 
 bin_PROGRAMS += mesos-execute
 mesos_execute_SOURCES = cli/execute.cpp
